fix(components): layout shift on active element in main navigation

--- a/packages/components/src/components/post-mainnavigation/post-mainnavigation.scss
+++ b/packages/components/src/components/post-mainnavigation/post-mainnavigation.scss
@@ -128,13 +128,20 @@ post-mainnavigation {
         height: var(--main-navigation-height);
         gap: var(--post-core-dimension-4);
         font-size: var(--post-core-font-size-16);
+        z-index: 4;
 
-        @include media.max(lg) {
-          z-index: 3;
+        .nav-el-active {
+          font-weight: 700;
+          text-align: center;
+          opacity: 0;
         }
 
-        @include media.min(lg) {
-          z-index: 4;
+        .nav-el-inactive {
+          position: absolute;
+          opacity: 1;
+          text-align: center;
+          width: 100%;
+          left: 0;
         }
 
         &.selected,
@@ -142,6 +149,14 @@ post-mainnavigation {
           background-color: #050400;
           color: #fff;
           font-weight: var(--post-core-font-weight-700);
+
+          .nav-el-active {
+            opacity: 1;
+          }
+
+          .nav-el-inactive {
+            opacity: 0;
+          }
         }
 
         &:hover {
@@ -159,6 +174,10 @@ post-mainnavigation {
       post-megadropdown-trigger button {
         padding-inline-end: var(--post-core-dimension-12);
         transition: border-block-end-color animation.$transition-base-timing;
+
+        .nav-el-inactive {
+          width: calc(100% - 28px);
+        }
 
         &::after {
           transition: transform animation.$transition-base-timing;
@@ -199,6 +218,10 @@ post-mainnavigation {
       > button,
       post-megadropdown-trigger button {
         @include header-mx.mobile-header-interactive;
+
+        .nav-el-inactive {
+          display: none;
+        }
       }
     }
 
